--- a/Read04-structure.html
+++ b/Read04-structure.html
@@ -1,3 +1,3 @@
-[Read 04: Structure with Html](READ.ME)(https://kevpro718.github.io/Learning-Journal/)
+[Read 04: Structure with Html](https://kevpro718.github.io/Learning-Journal/Read 04: Structure with Html)
 
 Read 04: Structure with HTML
