--- a/Read04-structure.html
+++ b/Read04-structure.html
@@ -1,3 +1,22 @@
 https://kevpro718.github.io/Learning-Journal/
 [Read 04 Structure with Html](Read-04-Structure-with-Html.md)
 Read 04: Structure with HTML
+Html 5 Layout Elements
+
+<header></header>
+
+<footer></footer>
+
+<nav></nav>
+
+<article></article>
+
+<aside></aside>
+
+<section></section>
+
+<hgroup></hgroup>
+
+<figure><figcaption></figcaption></figure>
+
+<div></div>
