--- a/Read04-structure.html
+++ b/Read04-structure.html
@@ -7,7 +7,17 @@ Html 5 Layout Elements
 
 <footer></footer>
 
+The main header or footer appears at the top or bottom of every page,
+
+the header can be used for the site name, and the footer element,
+
+may contain site information.
+
 <nav></nav>
+
+The <nav> element is used to contain major navigational blocks 
+  
+  on the site such as the primary site navigation
 
 <article></article>
 
