--- a/Read04-structure.html
+++ b/Read04-structure.html
@@ -17,13 +17,23 @@ may contain site information.
 
 The <nav> element is used to contain major navigational blocks 
   
-  on the site such as the primary site navigation
+  on the site such as the primary site navigation.
 
 <article></article>
+  
+  The article element acts as a container for any section of a
+  
+  page that could stand alone and potentially be syndicated.
 
 <aside></aside>
+  
+  The <aside> element has two purposes, depending on whether
+  
+  it is inside an <article> element or not.
 
 <section></section>
+  
+  
 
 <hgroup></hgroup>
 
