--- a/Read04-structure.html
+++ b/Read04-structure.html
@@ -31,12 +31,26 @@ The <nav> element is used to contain major navigational blocks
   
   it is inside an <article> element or not.
 
-<section></section>
+  <section></section>
   
+  The <section> element groups related content together,
   
-
-<hgroup></hgroup>
+  and typically each section would have its own
+  
+  heading.
+  
+  <hgroup></hgroup>
+  
+  The purpose of the <hgroup> element is to group
+  
+  together a set of one or more <h1> through <h6> 
+  
+  elements so that they are treated as one single
+  
+  heading.
 
 <figure><figcaption></figcaption></figure>
+  
+  
 
 <div></div>
