--- a/Read04-structure.html
+++ b/Read04-structure.html
@@ -51,6 +51,19 @@ The <nav> element is used to contain major navigational blocks
 
 <figure><figcaption></figcaption></figure>
   
+  It can be used to contain any content that is
   
-
+  referenced from the main flow of an article
+  
+  (not just images).
+  
 <div></div>
+  The <div> element will remain an important way
+  
+  to group together related elements, because you
+  
+  should not be using these new elements that you
+  
+  have just met fo purposes other than those
+  
+  explicitly stated.
