--- a/Read04-structure.html
+++ b/Read04-structure.html
@@ -1,5 +1,5 @@
-https://kevpro718.github.io/Learning-Journal/
-[Read 04 Structure with Html](Read-04-Structure-with-Html.md)
+[Read 04 Structure with Html](https://kevpro718.github.io/Learning-Journal/)
+
 Read 04: Structure with HTML
 Html 5 Layout Elements
 
